<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/layout_border_16dp"
    android:theme="@style/Theme.Material3.Light"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_name">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:id="@+id/et_name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="@dimen/layout_border_8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_limit">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="0.0"
            android:id="@+id/et_limit"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense">
        <Spinner
            android:id="@+id/sp_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:layout_marginTop="@dimen/layout_border_8dp"
        android:id="@+id/bt_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_submit"
        android:textColor="@color/white"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:padding="@dimen/layout_border_8dp"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>