<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_border_16dp"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeWidth="1dp"
        app:boxStrokeColor="@color/black"
        android:hint="@string/label_name">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:id="@+id/et_name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textview_date"
        android:layout_marginTop="@dimen/layout_border_8dp"
        android:layout_marginBottom="@dimen/layout_border_8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="SELECT DATE"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidth="1dp"
            app:boxStrokeColor="@color/black"
            android:hint="@string/label_debit">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_marginRight="@dimen/layout_border_4dp"
                android:text="0"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/et_debit"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_marginLeft="@dimen/layout_border_4dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidth="1dp"
            app:boxStrokeColor="@color/black"
            android:hint="@string/label_credit">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="0"
                android:id="@+id/et_credit"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <Spinner
        android:id="@+id/sp_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/bt_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_submit"
        android:padding="@dimen/layout_border_8dp"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>