<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    android:layout_margin="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_name"
            android:layout_margin="@dimen/layout_border_8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="Name"
            android:textSize="@dimen/text_size_medium"/>
    <LinearLayout
        android:padding="@dimen/layout_border_8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:text="@string/label_tag"/>
        <TextView
            android:textSize="@dimen/text_size_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_tag"/>
    </LinearLayout>
        <LinearLayout
            android:divider="?colorAccent"
            android:dividerPadding="1dp"
            android:showDividers="middle"
            android:padding="@dimen/layout_border_8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:gravity="left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_limit"/>
                <TextView
                    android:textSize="@dimen/text_size_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_limit"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_balance"/>
                <TextView
                    android:textSize="@dimen/text_size_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_balance"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>