<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"

    android:layout_margin="@dimen/layout_border_4dp">
    <RelativeLayout
        android:paddingLeft="@dimen/layout_border_4dp"
        android:paddingRight="@dimen/layout_border_4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/layout_border_4dp"
            android:layout_marginTop="@dimen/layout_border_4dp"
            android:layout_marginEnd="@dimen/layout_border_4dp"
            android:layout_marginBottom="@dimen/layout_border_4dp"
            android:gravity="center_vertical"
            android:hint="Name"
            android:inputType="textCapWords"
            android:textSize="@dimen/text_size_medium" />
        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_border_4dp"
            android:layout_marginTop="@dimen/layout_border_4dp"
            android:layout_marginEnd="@dimen/layout_border_4dp"
            android:layout_marginBottom="@dimen/layout_border_4dp"
            android:gravity="center_vertical"
            android:hint="Date"
            android:inputType="textCapWords"
            android:textSize="@dimen/text_size_medium" />
        <LinearLayout
            android:id="@+id/ll_acc"
            android:layout_alignParentStart="true"
            android:layout_below="@id/tv_date"
        android:padding="@dimen/layout_border_4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:text="@string/label_account"/>
        <TextView
            android:textSize="@dimen/text_size_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_account"/>
    </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_debut_credit"
            android:layout_below="@id/ll_acc"
            android:divider="?colorAccent"
            android:dividerPadding="1dp"
            android:showDividers="middle"
            android:padding="@dimen/layout_border_4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:gravity="left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_debit"/>
                <TextView
                    android:textSize="@dimen/text_size_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_debit"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_credit"/>
                <TextView
                    android:textSize="@dimen/text_size_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_credit"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>


</androidx.cardview.widget.CardView>